2008-05-14  Ivan Frade  <ivan.frade@nokia.com>

	* data/Makefile.am
	* data/sqlite-contents.sql: SQL code to create Contents table.
	
	* src/trackerd/tracker-db-sqlite.h
	* src/trackerd/tracker-db-sqlite.c:
	Using SQL file instead of hardcoded SQL to create ServiceContents
	table.
	(open_common_db): Removed. Using directly open_db_interface.
	(tracker_db_exec_proc): New. tracker_exec_proc but using
	TrackerDBInterface.
	(tracker_exec_no_reply) 
	(tracker_metadata_is_key): Now static functions only in .c
	(tracker_db_integrity_check): Removed. Unused function.
	
	
2008-05-13  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-main.c: Don't initialise Tracker members
	unnecessarily.

2008-05-13  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-main.[ch]: Removed the log_filename from
	the Tracker struct, it didn't need to be there. Also added a
	function to clean up the directory locations separately to
	actually physically removing particular directories when we exit
	the daemon.

2008-05-13  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/tracker-indexer-module.[ch]: 
	* src/tracker-indexer/tracker-indexer.[ch]: Added indentation
	information to the top of each file.
	
	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-cache.c:
	* src/trackerd/tracker-index-stage.[ch]:
	* src/trackerd/tracker-main.[ch]:
	* src/trackerd/tracker-metadata.c:
	* src/trackerd/tracker-process-files.c: Added TrackerIndexStage
	type to hold the current indexer state and type information.

2008-05-13  Carlos Garnacho  <carlos@imendio.com>

	Initial work on the separate indexer executable, implemented as a
	modular, single-threaded state machine.

	* src/tracker-indexer/main.c:
	* src/tracker-indexer/tracker-indexer.[ch]:
	* src/tracker-indexer/tracker-indexer-module.[ch]: Added, this is the
	indexer core.

	* src/tracker-indexer/modules/applications.c:
	* src/tracker-indexer/modules/dummy.c:
	* src/tracker-indexer/modules/files.c: